--- a/.github/workflows/relwithdebinfo.yml
+++ b/.github/workflows/relwithdebinfo.yml
@@ -39,7 +39,9 @@ jobs:
       - name: Build the mod (RelWithDebInfo)
         uses: geode-sdk/build-geode-mod@main
         with:
-          sdk: nightly
+          sdk: "v4.10.0"
+          configure-args: "SKIP_BUILDING_CODEGEN=OFF"
+          build-args: "SKIP_BUILDING_CODEGEN=OFF"
           build-config: RelWithDebInfo
           export-symbols: true
           export-pdb: true
